[gd_scene load_steps=27 format=3 uid="uid://caagcfxut0gva"]

[ext_resource type="Script" path="res://scenes/game/characters/player/player.gd" id="1_dxvgr"]
[ext_resource type="PackedScene" uid="uid://dbjn7oppdphpi" path="res://scenes/game/particles/magic_missile/magic_missile.tscn" id="2_v7h7u"]
[ext_resource type="Texture2D" uid="uid://dlg1p7m1cse3i" path="res://scenes/game/characters/player/player.png" id="3_e7se3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v41s8"]
radius = 7.25

[sub_resource type="Animation" id="Animation_4egaw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerShape/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_fcl6t"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerShape/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_xsn4u"]
resource_name = "damaged"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerShape/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_appgp"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerShape/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_buon0"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerShape/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qetrv"]
_data = {
"RESET": SubResource("Animation_4egaw"),
"attack": SubResource("Animation_fcl6t"),
"damaged": SubResource("Animation_xsn4u"),
"idle": SubResource("Animation_appgp"),
"walk": SubResource("Animation_buon0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hgedf"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uu8aw"]
animation = &"damaged"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ap0ef"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_08j1j"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vht6e"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3dkot"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t4i4r"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ceqf3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wyst6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_juveu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_beeeo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_phcen"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x8ti7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_omn4w"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3xrq7"]
states/End/position = Vector2(854, 102)
states/Start/position = Vector2(122, 85)
states/attack/node = SubResource("AnimationNodeAnimation_hgedf")
states/attack/position = Vector2(449, -67)
states/damaged/node = SubResource("AnimationNodeAnimation_uu8aw")
states/damaged/position = Vector2(449, 227)
states/idle/node = SubResource("AnimationNodeAnimation_ap0ef")
states/idle/position = Vector2(254, 85)
states/walk/node = SubResource("AnimationNodeAnimation_08j1j")
states/walk/position = Vector2(679, 85)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_vht6e"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_3dkot"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_t4i4r"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_ceqf3"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_wyst6"), "idle", "damaged", SubResource("AnimationNodeStateMachineTransition_juveu"), "walk", "damaged", SubResource("AnimationNodeStateMachineTransition_beeeo"), "attack", "damaged", SubResource("AnimationNodeStateMachineTransition_phcen"), "damaged", "idle", SubResource("AnimationNodeStateMachineTransition_x8ti7"), "attack", "walk", SubResource("AnimationNodeStateMachineTransition_omn4w")]
graph_offset = Vector2(-9, -74)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_0x1nf"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
safe_margin = 0.2
script = ExtResource("1_dxvgr")
spell_book = Array[PackedScene]([ExtResource("2_v7h7u")])

[node name="PlayerShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_v41s8")

[node name="PlayerSprite" type="Sprite2D" parent="PlayerShape"]
texture = ExtResource("3_e7se3")
offset = Vector2(0, -3)
hframes = 2
vframes = 3
frame = 2

[node name="PlayerAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qetrv")
}

[node name="PlayerAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_3xrq7")
anim_player = NodePath("../PlayerAnimations")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_0x1nf")

[node name="CastingPoint" type="Marker2D" parent="."]
position = Vector2(-9, -10)

[connection signal="animation_finished" from="PlayerAnimationTree" to="." method="_on_player_animation_tree_animation_finished"]
